cursive-bootstrap/tests/ui/E-TYP/E-TYP-2628.cursive
// RUN: compile-fail
// DIAG: E-TYP-2628
// SPEC: 6.2
// DESC: FfiSafeType requires complete layout

[[layout(C)]]
record Incomplete {
    ptr: *imm Incomplete
}

extern "C" {
    procedure ffi_incomplete(x: Incomplete) -> () //~ ERROR E-TYP-2628
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
